# Anjin-Byte.github.io

./: .gitignore  404.html  497.94ed43c5241ad7d63284.css  497.94ed43c5241ad7d63284.css.map  497.cdd5f587677818eb05c9.js  497.cdd5f587677818eb05c9.js.map  CLAUDE.md  Cargo.toml  LICENSE_MIT  Makefile  README.md  development-guidelines.md  index.html  main.a43b7d656d85bd521c8d.js  main.a43b7d656d85bd521c8d.js.map  main.js  package-lock.json  package.json  paper.md  resume.tex  src_index_js.js
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: deploy.yml  test.yml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.tests.json  vite.config.ts
app/.tests-dist/composables/: createFeatureComposable.js  useBlankZones.js  useDecals.js
app/.tests-dist/tests/: blankZones.test.js  decals.test.js  hires.test.js  text.test.js
app/.tests-dist/types/: blankZones.js  decals.js  hiresRegion.js  text.js
app/.tests-dist/utils/: blankZoneNormalization.js  blankZoneStorage.js  decalNormalization.js  decalStorage.js  featureStorage.js  hiresNormalization.js  hiresStorage.js  normalizeArray.js  textNormalization.js  textStorage.js
app/.tests-dist/workers/: FeatureState.js  HiResState.js
app/src/: App.vue  featureFlags.ts  logger.ts  main.ts  vite-env.d.ts
app/src/composables/: createFeatureComposable.ts  useAnimationLoop.ts  useBlankZones.ts  useCamera.ts  useCameraGridSync.ts  useCanvasSurface.ts  useColliders.ts  useCompass.ts  useCoordinateMapper.ts  useDecals.ts  useDragToPan.ts  useDragTools.ts  useHiRes.ts  useLaneScroll.ts  useMermaid.ts  useRendererBackend.ts  useText.ts  useTextInput.ts  useThemePreference.ts  useWorkerBridge.ts  useWorkerDiagnostics.ts
app/src/config/: features.ts
app/src/data/: notebook-parse.ts  notebook.ts  profile.ts
app/src/perf/: FrameTimer.ts  PerfSampler.ts  constants.ts  index.ts
app/src/plugins/: vuetify.ts
app/src/router/: cameraSync.ts  index.ts
app/src/space/: breakAway.ts  cameraEasing.ts  collision.ts  compass.ts  layout.ts  layoutConfig.ts  markerSolver.ts  notebookNodes.ts  tokens.ts  waypoints.ts
app/src/tests/: blankZones.test.ts  breakAway.test.ts  cameraEasing.test.ts  cameraSign.test.ts  captureScroll.test.ts  collision.test.ts  compass.test.ts  decals.test.ts  dprDiscipline.test.ts  frameGate.test.ts  gridCoords.test.ts  hires.test.ts  layout.test.ts  markerSolver.test.ts  notebook.test.ts  text.test.ts  themeParity.test.ts  waypoints.test.ts
app/src/types/: blankZones.ts  decals.ts  hiresRegion.ts  notebook.ts  space.ts  text.ts  theme.ts
app/src/utils/: blankZoneNormalization.ts  blankZoneStorage.ts  decalNormalization.ts  decalStorage.ts  devicePixelRatio.ts  featureStorage.ts  gridCoords.ts  hiresNormalization.ts  hiresStorage.ts  normalizeArray.ts  projectLinks.ts  textNormalization.ts  textStorage.ts
assets/: __vite-plugin-wasm-helper-oqf-7dtx.js  backgroundRenderer-01yVVv0P.js  backgroundRenderer-BF-NsoXI.js  backgroundRenderer-BGvR_rno.js  backgroundRenderer-BS2Yizk8.js  backgroundRenderer-BTgl7YCP.js  backgroundRenderer-BUrRa-NX.js  backgroundRenderer-BUwMKoG3.js  backgroundRenderer-BWtIrcvX.js  backgroundRenderer-BYYkxl_g.js  backgroundRenderer-BdXzG2nH.js  backgroundRenderer-BhhY7M_-.js  backgroundRenderer-BxoC6poI.js  backgroundRenderer-C3qpQaPa.js  backgroundRenderer-CHCJ4rNo.js  backgroundRenderer-CNPACESS.js  backgroundRenderer-CQKOreA-.js  backgroundRenderer-CeRQCkRo.js  backgroundRenderer-Ch7dI-3h.js  backgroundRenderer-CqhQhs-o.js  backgroundRenderer-DBvns1f7.js  backgroundRenderer-DE72mVYc.js  backgroundRenderer-DJYItPZY.js  backgroundRenderer-DNKz6CFe.js  backgroundRenderer-DhPrMTPw.js  backgroundRenderer-DiHNghAK.js  backgroundRenderer-DzvpkqwQ.js  backgroundRenderer-JPvXVC9u.js  backgroundRenderer-NUQDW6up.js  backgroundRenderer-PSzUOGmN.js  backgroundRenderer-TwKQyfEC.js  backgroundRenderer-WQNR2VcP.js  backgroundRenderer-YUQbY-oj.js  backgroundRenderer-gyUaxR2j.js  backgroundRenderer-kw-sXA_V.js  backgroundRenderer-zTugIwQm.js  game_of_life_bg-2nO6j9bg.wasm  game_of_life_bg-AzI5K2Sm.wasm  game_of_life_bg-BTVrrDst.wasm  game_of_life_bg-BcLuIHEe.wasm  (+192 more)
crates/game_of_life/: Cargo.toml
crates/game_of_life/src/: lib.rs  universe.rs
crates/game_of_life/tests/: web.rs
crates/game_of_life_core/: Cargo.toml  build.rs  patterns.toml
crates/game_of_life_core/src/: lib.rs  pattern.rs  patterns.rs  seeding.rs  world.rs
crates/game_of_life_core/tests/: regression.rs
crates/game_of_life_gpu/: Cargo.toml
crates/game_of_life_gpu/src/: context.rs  decals.rs  gpu.rs  grid.rs  lib.rs  perf.rs  renderer.rs  shaders.rs  simulation.rs  text.rs  webgl.rs  zones.rs
crates/game_of_life_gpu/src/hires/: boundary.rs  dispatch.rs  mask.rs  mod.rs  pipelines.rs  region.rs
crates/game_of_life_gpu/src/renderer/: bindings.rs  mod.rs  noise.rs  pipeline.rs  types.rs
crates/game_of_life_gpu/wgsl/: boundary_extract.wgsl  compute.wgsl  gol_tick.wgsl  hires_compute.wgsl  render.wgsl  render_gles.wgsl
docs/: architecture-audit.md  architecture-overview.md  audit-1-gpu-pipeline-coupling.md  audit-2-appbackground-monolith.md  audit-3-pingpong-parity-fragility.md  audit-4-repeated-compute-abstraction.md  audit-5-code-duplication.md  decal-system-requirements.md  grid-line-blanking-requirements.md  image-decals-design.md  multi-resolution-grid-design.md  sdf-text-design.md  solution-1-gpu-pipeline-decoupling.md  solution-2-appbackground-extraction.md  solution-3-pingpong-parity-fix.md  solution-4-multi-step-compute.md  solution-5-generic-state-management.md
src/: lib.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT  package-lock.json  package.json
wasm-game-of-life/pkg/: package.json  wasm_game_of_life.d.ts  wasm_game_of_life.js  wasm_game_of_life_bg.js  wasm_game_of_life_bg.wasm  wasm_game_of_life_bg.wasm.d.ts
wasm-game-of-life/src/: lib.rs
wasm-game-of-life/www/: ____.html  bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
www/: index.js  package-lock.json  package.json  webpack.config.js
www/src/: index.html  index.js
(+50 files in other folders)
