[package]
name = "game-of-life"
version = "0.1.0"
authors = ["Taylor Hale <thalesarkanzen@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
game-of-life-core = { path = "../game_of_life_core" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

# wasm-opt must enable the wasm features rustc now emits under LTO (bulk-memory's
# memory.copy, nontrapping float→int, …); the bundled v117 otherwise rejects
# them. `-O` is the speed-respecting default — NOT a size-first `-Oz`/`-Os`.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
  "-O",
  "--enable-bulk-memory",
  "--enable-nontrapping-float-to-int",
  "--enable-sign-ext",
  "--enable-mutable-globals",
  "--enable-multivalue",
  "--enable-reference-types",
]
