[package]
name = "game-of-life-core"
version = "0.1.0"
edition = "2021"
# build.rs runs on the build host (native target).  It reads
# patterns.toml, fetches RLEs from LifeWiki on first build (cached
# in patterns_cache/ for offline reuse), parses them, and emits a
# generated Rust source file containing the pattern constants and
# category indices.  See build.rs for full mechanics.
build = "build.rs"

# Pure-Rust core for the Game of Life simulation: bitpacked World, tick rule,
# pattern stamping, alive-count.  No GPU dependencies; no JS-facing exports.
# Both the CPU adapter (game_of_life crate, Phase 2) and the GPU adapter
# (game_of_life_gpu crate) consume this as their cell-state representation.
#
# Tests run in plain `cargo test -p game-of-life-core` with no fixtures —
# the crate is the codex's "pure core" surface (see engineering-codex
# Pure Core, Effectful Edges).

[lib]
crate-type = ["rlib"]

[dependencies]
rand         = { version = "0.8", default-features = false }
rand_xoshiro = { version = "0.6", default-features = false }

[build-dependencies]
toml = { version = "0.8", default-features = false, features = ["parse"] }
# HTTP fetching is delegated to the system `curl` binary via
# std::process::Command — sidesteps the TLS-fingerprint blocking
# that LifeWiki's CloudFlare layer applies to Rust HTTP clients,
# and avoids pulling a TLS stack into the build graph.
