[package]
name = "game-of-life-gpu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
bytemuck             = { version = "1", features = ["derive"] }
console_error_panic_hook = { version = "0.1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "OffscreenCanvas", "Window"] }
wgpu    = { version = "22", default-features = false, features = ["webgpu", "wgsl"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
